trunk/Archive2/8f/1285680f453398/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:22:16: error: ‘ff’ cannot be used as a function
  cout<<ff(21,12)<<endl;
                ^
